# SynapseStudy

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py  worker.py
backend/app/core/: auth.py  config.py
backend/app/routers/: courses.py  learning.py  tutor.py
backend/app/services/: embeddings.py  evaluation.py  generation.py  guided_learning.py  ingestion.py  mastery.py  retrieval.py  serializers.py  storage.py  text_utils.py  tutor.py
backend/synapse_study_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_config.py
frontend/: index.html  package.json  pnpm-lock.yaml  run-build.ps1  run-dev.ps1  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConfidenceSelector.tsx  ProfileGate.tsx  TabButton.tsx
frontend/src/lib/: api.ts  profile.ts  types.ts
frontend/src/routes/: CoursePage.tsx  HomePage.tsx
